--- a/index.html
+++ b/index.html
@@ -60,12 +60,24 @@
 
       <section id="about-me">
         <h1 class="main-title">About Me</h1>
-        <p class="about-blurb">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Egestas purus viverra accumsan in nisl nisi scelerisque eu ultrices. Eu facilisis sed odio morbi quis commodo. At quis risus sed vulputate odio ut. Tortor condimentum lacinia quis vel eros. Sed elementum tempus egestas sed sed risus. Fringilla est ullamcorper eget nulla facilisi etiam dignissim diam. Sit amet nisl suscipit adipiscing bibendum est ultricies integer. Posuere urna nec tincidunt praesent. Non nisi est sit amet facilisis magna. Feugiat nibh sed pulvinar proin. Dolor purus non enim praesent elementum facilisis leo vel. Nulla aliquet enim tortor at. Viverra ipsum nunc aliquet bibendum enim. Sit amet luctus venenatis lectus. Lorem ipsum dolor sit amet consectetur adipiscing elit. Mauris sit amet massa vitae. At augue eget arcu dictum. Lorem ipsum dolor sit amet consectetur adipiscing.
+        <p class="about-blurb">
+          Hello and welcome to my website! My name is Ian McConachie and I am a student studying math and computer science at the University of Oregon. My expected graduation date is in June 2023, after which I plan to pursue a career in technical writing. I am passionate about technology and science, but also love communicating with people especially through writing. It is my goal to spread interest and curiosity in technology so that I can share what I find so fascinating with the world.
+          <br><br>
+          Outside the realm of technical writing, I also care deeply about volunteering. I have worked with organizations such as the Oregon Justice Resource Center, FOOD for Lane County, and the Oregon Food Bank. I believe it is important for every individual to try to make a positive impact on the world around them and I am always looking for new ways to help out. In addition to volunteering, my hobbies include photography, hiking/backpacking, and table tennis.
         </p>
+
+        <h2 class="sub-title">Education</h2>
+        <h3 class="edu-title">University of Oregon</h3>
+        <h4 class="edu-blurb"><b>2019-present, Pursuing Bachelor's Degree</b></h4>
+        <h4 class="edu-blurb"><b>Majors:</b> Computer Science, Mathematics</h4>
+        <h4 class="edu-blurb"><b>Current GPA:</b> 4.13</h4>
+        <h4 class="edu-blurb"><b>Expected Graduation</b> June 2023</h4>
+        
+        
       </section>
 
       <section id="portfolio">
-      <h1 class="main-title">Portfolio</h1>
+      <h1 class="main-title not-top">Portfolio</h1>
 
       <div class="row port-table">
         <div class="col col-6 port-col">
@@ -90,7 +102,7 @@
 
 
       <section id="work-exp">
-        <h1 class="main-title">Work Experience</h1>
+        <h1 class="main-title not-top">Work Experience</h1>
         <div class="row exp-table">
           <div class="col col-1">
             <img src="images/intel-logo.png" class="exp-img" alt="intel-logo">
@@ -144,8 +156,8 @@
 
 
       <section id="contact">
-      <h1 class="main-title">Contact</h1>
-      <p class="about-blurb">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Egestas purus viverra accumsan in nisl nisi scelerisque eu ultrices. Eu facilisis sed odio morbi quis commodo. At quis risus sed vulputate odio ut. Tortor condimentum lacinia quis vel eros.
+      <h1 class="main-title not-top">Contact</h1>
+      <p class="about-blurb">There are several ways to get in touch with me. You can message me or make a connection on LinkedIn by clicking the LinkedIn logo on the left. If you want to learn more about the work I've done you can also click the GitHub icon to see some of the coding and technical writing projects I have worked on throughout the years. If you want to send me an email, fill out the form below and I'll get back to you as soon as I can!
       </p>
       <h2 class="sub-title">Send Me An Email!</h2>
       <form class="contact-form">
