Started Writing Portfolio
Added a few cards to the writing portfolio.

--- a/writing.html
+++ b/writing.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 
 <head>
+  <meta charset="utf-8">
+  <title>Writing Portfolio</title>
+
 
 	<link rel="stylesheet" href="css/styles.css">
 
@@ -24,4 +27,66 @@
 	<div class="page-header">
 		<h1 class="page-title">Writing Portfolio</h1>
 	</div>
+
+  <div class="row port-row">
+    <div class="col port-col col-sm-12 col-md-6 col-lg-4">
+      <a href="https://uefi.org/sites/default/files/resources/UEFI_Spec_2_10_Aug29.pdf" class="card-ref" target="_blank">
+        <div class="card">
+        <img class="card-img-top" src="images/uefi.png" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">UEFI Specification</h5>
+          <p class="card-text">Edited, formatted, and contributed to UEFI Specification 2.9A and 2.10 as a Technical Writing Intern at Intel</p>
+        </div>
+      </div>
+      </a>    
+    </div>
+
+    <div class="col port-col col-sm-12 col-md-6 col-lg-4">
+      <a href="https://github.com/IanMcConachie/CS-422-Project-1/tree/main/docs" class="card-ref" target="_blank">
+        <div class="card">
+        <img class="card-img-top" src="images/time_series.png" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">DATSR Documentation</h5>
+          <p class="card-text">Created all documentation including design specification, requirements engineering, user docs, and a developer's manual for a time series repository in an upper level software methodologies course.</p>
+        </div>
+      </div>
+      </a>    
+    </div>
+
+    <div class="col port-col col-sm-12 col-md-6 col-lg-4">
+      <a href="https://uefi.org/sites/default/files/resources/UEFI_Spec_2_10_Aug29.pdf" class="card-ref" target="_blank">
+        <div class="card">
+        <img class="card-img-top" src="images/tianocore.jpg" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Tianocore Training Guides</h5>
+          <p class="card-text">Edited, formatted, and contributed to UEFI Specification 2.9A and 2.10 as a Technical Writing Intern at Intel</p>
+        </div>
+      </div>
+      </a>    
+    </div>
+
+    <div class="col port-col col-sm-12 col-md-6 col-lg-4">
+      <a href="https://uefi.org/sites/default/files/resources/UEFI_Spec_2_10_Aug29.pdf" class="card-ref" target="_blank">
+        <div class="card">
+        <img class="card-img-top" src="images/uefi.png" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">UEFI PI Specification</h5>
+          <p class="card-text">Edited, formatted, and contributed to UEFI Specification 2.9A and 2.10 as a Technical Writing Intern at Intel</p>
+        </div>
+      </div>
+      </a>    
+    </div>
+
+    <div class="col port-col col-sm-12 col-md-6 col-lg-4">
+      <a href="https://uefi.org/sites/default/files/resources/UEFI_Spec_2_10_Aug29.pdf" class="card-ref" target="_blank">
+        <div class="card">
+        <img class="card-img-top" src="images/uefi.png" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">ACPI Specification</h5>
+          <p class="card-text">Edited, formatted, and contributed to UEFI Specification 2.9A and 2.10 as a Technical Writing Intern at Intel</p>
+        </div>
+      </div>
+      </a>    
+    </div>
+  </div>
 </body>
