--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
         <div class="menu-div">
           <ul class="menu-list">
             <li class="menu-item">
-              <a href="#" class="menu-link">About Me</a>
+              <a href="#about-me" class="menu-link">About Me</a>
             </li>
             <li class="menu-item">
-              <a href="#" class="menu-link">Work Experience</a>
+              <a href="#portfolio" class="menu-link">Portfolio</a>
             </li>
             <li class="menu-item">
-              <a href="#" class="menu-link">Portfolio</a>
+              <a href="#work-exp" class="menu-link">Work Experience</a>
             </li>
             <li class="menu-item">
-              <a href="#" class="menu-link">Contact</a>
+              <a href="#contact" class="menu-link">Contact</a>
             </li>
           </ul>
         </div>
@@ -66,12 +66,23 @@
           Outside the realm of technical writing, I also care deeply about volunteering. I have worked with organizations such as the Oregon Justice Resource Center, FOOD for Lane County, and the Oregon Food Bank. I believe it is important for every individual to try to make a positive impact on the world around them and I am always looking for new ways to help out. In addition to volunteering, my hobbies include photography, hiking/backpacking, and table tennis.
         </p>
 
-        <h2 class="sub-title">Education</h2>
-        <h3 class="edu-title">University of Oregon</h3>
-        <h4 class="edu-blurb"><b>2019-present, Pursuing Bachelor's Degree</b></h4>
-        <h4 class="edu-blurb"><b>Majors:</b> Computer Science, Mathematics</h4>
-        <h4 class="edu-blurb"><b>Current GPA:</b> 4.13</h4>
-        <h4 class="edu-blurb"><b>Expected Graduation</b> June 2023</h4>
+        <div class="row about-table">
+          <div class="col col-6">
+            <h2 class="sub-title">Education</h2>
+            <h3 class="edu-title">University of Oregon</h3>
+            <h4 class="edu-blurb"><b>2019-present, Pursuing Bachelor's Degree</b></h4>
+            <h4 class="edu-blurb"><b>Majors:</b> Computer Science, Mathematics</h4>
+            <h4 class="edu-blurb"><b>Current GPA:</b> 4.13</h4>
+            <h4 class="edu-blurb"><b>Expected Graduation</b> June 2023</h4>
+          </div>
+          <div class="col col-6">
+            <h2 class="skills-title">Skills</h2>
+            <h3 class="skills-sub">Technical</h3>
+            <h4 class="skills-blurb">Python, C, C++, HTML, CSS, Bootstrap, Markdown, LaTeX, reStructuredText, Git, Macaulay2, Linux, R, Statistics</h4>
+            <h3 class="skills-sub">Non-Technical</h3>
+            <h4 class="skills-blurb">Writing, Public Speaking, Quick Learning, Interpersonal Communication, Technical Communication, Team Management, Mathematical Reasoning</h4>
+          </div>
+        </div>
         
         
       </section>
