Updated Code Portfolio
Added three coding projects to the code portfolio page.

--- a/code.html
+++ b/code.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 
 <head>
+  <meta charset="utf-8">
+  <title>Code Portfolio</title>
 
 	<link rel="stylesheet" href="css/styles.css">
 
@@ -24,4 +26,45 @@
 	<div class="page-header">
 		<h1 class="page-title">Code Portfolio</h1>
 	</div>
+
+  <div class="row port-row">
+    <div class="col port-col col-sm-12 col-md-6 col-lg-4">
+      <a href="https://github.com/IanMcConachie/IanMcConachie.github.io" class="card-ref" target="_blank">
+        <div class="card">
+        <img class="card-img-top" src="images/web_logo.png" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Personal Website</h5>
+          <p class="card-text">Created a multi-page resume website using HTML, CSS, and Bootstrap. Built in responsive design and dynamic components.</p>
+        </div>
+      </div>
+      </a>    
+    </div>
+
+    <div class="col port-col col-sm-12 col-md-6 col-lg-4">
+      <a href="https://github.com/IanMcConachie/CS-422-Project-1/tree/main/docs" class="card-ref" target="_blank">
+        <div class="card">
+        <img class="card-img-top" src="images/fuji.jpg" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Fuji Messenger</h5>
+          <p class="card-text">Currently developing an instant messaging protocol that only allows messages in the form of a haiku. Using C++ and UDP packets to implement functionality.</p>
+        </div>
+      </div>
+      </a>    
+    </div>
+
+    <div class="col port-col col-sm-12 col-md-6 col-lg-4">
+      <a href="https://github.com/IanMcConachie/Presentation_FW/tree/main/FW/Presentations/Lab_Guides" class="card-ref" target="_blank">
+        <div class="card">
+        <img class="card-img-top" src="images/color_wheel.png" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Gbiv Color Analyzer</h5>
+          <p class="card-text">Developed python script for extracting and analyzing the dominant color in an image. Also built functions for generating recommended palettes and related colors.</p>
+        </div>
+      </div>
+      </a>    
+    </div>
+
 </body>
+
+
+
