Updated Writing Portfolio
Added several projects to the writing portfolio page.

--- a/writing.html
+++ b/writing.html
@@ -35,7 +35,7 @@
         <img class="card-img-top" src="images/uefi.png" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">UEFI Specification</h5>
-          <p class="card-text">Edited, formatted, and contributed to UEFI Specification 2.9A and 2.10 as a Technical Writing Intern at Intel</p>
+          <p class="card-text">Edited, formatted, and contributed to UEFI Specification 2.9A and 2.10 as a Technical Writing Intern at Intel.</p>
         </div>
       </div>
       </a>    
@@ -47,46 +47,59 @@
         <img class="card-img-top" src="images/time_series.png" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">DATSR Documentation</h5>
-          <p class="card-text">Created all documentation including design specification, requirements engineering, user docs, and a developer's manual for a time series repository in an upper level software methodologies course.</p>
+          <p class="card-text">Created documentation for student-led web time series repository project. Includes requirement engineering, design specification, user docs, and developer's manual.</p>
         </div>
       </div>
       </a>    
     </div>
 
     <div class="col port-col col-sm-12 col-md-6 col-lg-4">
-      <a href="https://uefi.org/sites/default/files/resources/UEFI_Spec_2_10_Aug29.pdf" class="card-ref" target="_blank">
+      <a href="https://github.com/IanMcConachie/Presentation_FW/tree/main/FW/Presentations/Lab_Guides" class="card-ref" target="_blank">
         <div class="card">
         <img class="card-img-top" src="images/tianocore.jpg" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Tianocore Training Guides</h5>
-          <p class="card-text">Edited, formatted, and contributed to UEFI Specification 2.9A and 2.10 as a Technical Writing Intern at Intel</p>
+          <p class="card-text">Wrote Markdown lab guides for firmware development courses as part of the Tianocore training program as a Technical Writing Intern at Intel.</p>
         </div>
       </div>
       </a>    
     </div>
 
     <div class="col port-col col-sm-12 col-md-6 col-lg-4">
-      <a href="https://uefi.org/sites/default/files/resources/UEFI_Spec_2_10_Aug29.pdf" class="card-ref" target="_blank">
+      <a href="https://uefi.org/sites/default/files/resources/PI_Spec_1_7_A_final_May1.pdf" class="card-ref" target="_blank">
         <div class="card">
-        <img class="card-img-top" src="images/uefi.png" alt="Card image cap">
+        <img class="card-img-top" src="images/color_wheel.png" alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title">UEFI PI Specification</h5>
-          <p class="card-text">Edited, formatted, and contributed to UEFI Specification 2.9A and 2.10 as a Technical Writing Intern at Intel</p>
+          <h5 class="card-title">Gbiv Documentation</h5>
+          <p class="card-text">Working on documentation for color analysis web application. Includes requirement engineering, design specification, user docs, and developer's manual.</p>
         </div>
       </div>
       </a>    
     </div>
 
     <div class="col port-col col-sm-12 col-md-6 col-lg-4">
-      <a href="https://uefi.org/sites/default/files/resources/UEFI_Spec_2_10_Aug29.pdf" class="card-ref" target="_blank">
+      <a href="https://uefi.org/sites/default/files/resources/ACPI_Spec_6_5_Aug29.pdf" class="card-ref" target="_blank">
         <div class="card">
         <img class="card-img-top" src="images/uefi.png" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">ACPI Specification</h5>
-          <p class="card-text">Edited, formatted, and contributed to UEFI Specification 2.9A and 2.10 as a Technical Writing Intern at Intel</p>
+          <p class="card-text">Edited, formatted, and contributed to ACPI Specification 6.4A and 6.5 as a Technical Writing Intern at Intel.</p>
         </div>
       </div>
       </a>    
     </div>
+
+    <div class="col port-col col-sm-12 col-md-6 col-lg-4">
+      <a href="https://github.com/IanMcConachie/Presentation_FW/tree/main/FW/Presentations/Lab_Guides" class="card-ref" target="_blank">
+        <div class="card">
+        <img class="card-img-top" src="images/wiki_logo.png" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title">Wikipedia Editing</h5>
+          <p class="card-text">Edited several wikipedia pages both adding new content and improving/editing existing content.</p>
+        </div>
+      </div>
+      </a>    
+    </div>
+
   </div>
 </body>
