--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       <h1 class="main-title not-top">Portfolio</h1>
 
       <div class="row port-table">
-        <div class="col col-6 port-col">
+        <div class="col col-6 portfolio-col">
           <div class="port-item">
             <a href="writing.html" class="port-link port-link-1">
               <i class="fa-solid fa-pencil port-logo"></i>
@@ -99,7 +99,7 @@
             </a>
           </div>
         </div>
-        <div class="col col-6 port-col">
+        <div class="col col-6 portfolio-col">
           <div class="port-item">
             <a href="code.html" class="port-link port-link-2">
               <i class="fa-solid fa-code port-logo"></i>
