--- a/index.html
+++ b/index.html
@@ -24,41 +24,48 @@
 </head>
 
 <body>
+
+  <!-- Left Bar (for larger screens) -->
   <div class="left-bar"></div>
-  <div class="row sticky-bottom">
-    <div class="col side-sec col-lg-3 col-md-3 d-xs-none d-sm-none d-md-block left-col side-sec">
-      <div class="position-fixed side-sub-sec">
-        <img src="images/headshot.png" class="headshot-img" alt="headshot">
-        <div class="name-div">
-          <h2 class="name">Ian McConachie</h2>
-          <h3 class="name-desc">Writer · Programmer</h3>
-        </div>
-        <div class="menu-div">
-          <ul class="menu-list">
-            <li class="menu-item">
-              <a href="#about-me" class="menu-link">About Me</a>
-            </li>
-            <li class="menu-item">
-              <a href="#portfolio" class="menu-link">Portfolio</a>
-            </li>
-            <li class="menu-item">
-              <a href="#work-exp" class="menu-link">Work Experience</a>
-            </li>
-            <li class="menu-item">
-              <a href="#contact" class="menu-link">Contact</a>
-            </li>
-          </ul>
-        </div>
-        <div class="social-div sticky-bottom">
-          <a href="https://www.linkedin.com/in/ian-mcconachie-8b4513243/" class="social-link"><i class="fa-brands fa-linkedin social-logo"></i></a>
-          <a href="https://github.com/IanMcConachie" class="social-link"><i class="fa-brands fa-github social-logo"></i></a>
-        </div>
-      </div>
+    <img src="images/headshot.png" class="headshot-img" alt="headshot">
+    <h2 class="name">Ian McConachie</h2>
+    <h3 class="name-desc">Writer · Programmer</h3>
+
+    <!-- Site Menu -->
+    <div class="menu-div">
+      <ul class="menu-list">
+        <li class="menu-item">
+          <a href="#about-me" class="menu-link">About Me</a>
+        </li>
+        <li class="menu-item">
+          <a href="#portfolio" class="menu-link">Portfolio</a>
+        </li>
+        <li class="menu-item">
+          <a href="#work-exp" class="menu-link">Work Experience</a>
+        </li>
+        <li class="menu-item">
+          <a href="#contact" class="menu-link">Contact</a>
+        </li>
+      </ul>
     </div>
 
-    <div class="col main-sec col-lg-9 col-md-9 col-sm-12">
+    <div class="social-div">
+        <a href="https://www.linkedin.com/in/ian-mcconachie-8b4513243/" class="social-link"><i class="fa-brands fa-linkedin social-logo"></i></a>
+        <a href="https://github.com/IanMcConachie" class="social-link"><i class="fa-brands fa-github social-logo"></i></a>
+    </div>
+  </div>
 
-      <section id="about-me">
+  <!-- Top Bar (for smaller screens) -->
+  <div class="top-bar"></div>
+    <h2 class="name-top">Ian McConachie</h2>
+    <h3 class="name-desc-top">Writer · Programmer</h3>
+  </div>
+
+  <!-- Main Page -->
+  <div class="main-sec">
+
+    <!-- About Me Section -->
+    <section id="about-me">
         <h1 class="main-title">About Me</h1>
         <p class="about-blurb">
           Hello and welcome to my website! My name is Ian McConachie and I am a student studying math and computer science at the University of Oregon. My expected graduation date is in June 2023, after which I plan to pursue a career in technical writing. I am passionate about technology and science, but also love communicating with people especially through writing. It is my goal to spread interest and curiosity in technology so that I can share what I find so fascinating with the world.
@@ -66,126 +73,30 @@
           Outside the realm of technical writing, I also care deeply about volunteering. I have worked with organizations such as the Oregon Justice Resource Center, FOOD for Lane County, and the Oregon Food Bank. I believe it is important for every individual to try to make a positive impact on the world around them and I am always looking for new ways to help out. In addition to volunteering, my hobbies include photography, hiking/backpacking, and table tennis.
         </p>
 
-        <div class="row about-table">
-          <div class="col col-6">
-            <h2 class="sub-title">Education</h2>
-            <h3 class="edu-title">University of Oregon</h3>
-            <h4 class="edu-blurb"><b>2019-present, Pursuing Bachelor's Degree</b></h4>
-            <h4 class="edu-blurb"><b>Majors:</b> Computer Science, Mathematics</h4>
-            <h4 class="edu-blurb"><b>Current GPA:</b> 4.13</h4>
-            <h4 class="edu-blurb"><b>Expected Graduation</b> June 2023</h4>
-          </div>
-          <div class="col col-6">
-            <h2 class="skills-title">Skills</h2>
-            <h3 class="skills-sub">Technical</h3>
-            <h4 class="skills-blurb">Python, C, C++, HTML, CSS, Bootstrap, Markdown, LaTeX, reStructuredText, Git, Macaulay2, Linux, R, Statistics</h4>
-            <h3 class="skills-sub">Non-Technical</h3>
-            <h4 class="skills-blurb">Writing, Public Speaking, Quick Learning, Interpersonal Communication, Technical Communication, Team Management, Mathematical Reasoning</h4>
-          </div>
+      <div class="row about-table">
+        <div class="col col-6">
+          <h2 class="sub-title">Education</h2>
+          <h3 class="abt-subtitle">University of Oregon</h3>
+          <h4 class="abt-txt"><b>2019-2023, Bachelor's of Science</b></h4>
+          <h4 class="abt-txt"><b>Majors:</b> Computer Science, Mathematics</h4>
+          <h4 class="abt-txt"><b>GPA:</b> 4.10, Summa Cum Laude</h4>
+          <h4 class="abt-txt"><b>Selected Courses:</b></h4>
         </div>
-        
-        
-      </section>
-
-      <section id="portfolio">
-      <h1 class="main-title not-top">Portfolio</h1>
-
-      <div class="row port-table">
-        <div class="col col-6 portfolio-col">
-          <div class="port-item">
-            <a href="writing.html" class="port-link port-link-1">
-              <i class="fa-solid fa-pencil port-logo"></i>
-              <h3 class="port-title">Writing</h3>
-            </a>
-          </div>
-        </div>
-        <div class="col col-6 portfolio-col">
-          <div class="port-item">
-            <a href="code.html" class="port-link port-link-2">
-              <i class="fa-solid fa-code port-logo"></i>
-              <h3 class="port-title port-code">Code</h3>
-            </a>
-          </div>
+        <div class="col col-6">
+          <h2 class="sub-title">Skills</h2>
+          <h3 class="abt-subtitle">Technical</h3>
+          <h4 class="abt-txt">Python, C, C++, HTML, CSS, Bootstrap, Markdown, LaTeX, reStructuredText, Git, Macaulay2, Linux, R, Statistics</h4>
+          <h3 class="abt-subtitle">Non-Technical</h3>
+          <h4 class="abt-txt">Writing, Public Speaking, Quick Learning, Interpersonal Communication, Technical Communication, Team Management, Mathematical Reasoning</h4>
         </div>
       </div>
-      </section>
+    </section>
 
 
 
-      <section id="work-exp">
-        <h1 class="main-title not-top">Work Experience</h1>
-        <div class="row exp-table">
-          <div class="col col-1">
-            <img src="images/intel-logo.png" class="exp-img" alt="intel-logo">
-          </div>
-          <div class="col col-5"> 
-            <h4 class="exp-title">Technical Writing Intern</h4>
-            <h5 class="exp-desc">Intel, 2022</h5>
-          </div>
-          <div class="col col-1">
-            <img src="images/oregon-logo.jpg" class="exp-img" alt="uo-logo">
-          </div>
-          <div class="col col-5">
-            <h4 class="exp-title">Undergraduate Researcher</h4>
-            <h5 class="exp-desc">University of Oregon Mathematics, 2021</h5>
-          </div>
-        </div>
-        <div class="row exp-table">
-          <div class="col col-1">
-            <img src="images/oregon-logo.jpg" class="exp-img" alt="uo-logo">
-          </div>
-          <div class="col col-5">
-            <h4 class="exp-title">Math Discussion Leader</h4>
-            <h5 class="exp-desc">University of Oregon Mathematics, 2022</h5>
-          </div>
-          <div class="col col-1">
-            <img src="images/oregon-logo.jpg" class="exp-img" alt="uo-logo">
-          </div>
-          <div class="col col-5">
-            <h4 class="exp-title">Help Desk Technician</h4>
-            <h5 class="exp-desc">Lundquist College of Business, 2021</h5>
-          </div>
-        </div>
-        <div class="row exp-table">
-          <div class="col col-1">
-            <img src="images/ojrc-logo.jpg" class="exp-img" alt="ojrc-logo">
-          </div>
-          <div class="col col-5">
-            <h4 class="exp-title">Volunteer Intern</h4>
-            <h5 class="exp-desc">Oregon Justice Resource Center, 2021</h5>
-          </div>
-          <div class="col col-1">
-            <img src="images/bsd-logo.jpg" class="exp-img" alt="bsd-logo">
-          </div>
-          <div class="col col-5">
-            <h4 class="exp-title">Exterior Painter</h4>
-            <h5 class="exp-desc">Beaverton School District, 2020</h5>
-          </div>
-        </div>
-      </section>
-
-
-
-      <section id="contact">
-      <h1 class="main-title not-top">Contact</h1>
-      <p class="about-blurb">There are several ways to get in touch with me. You can message me or make a connection on LinkedIn by clicking the LinkedIn logo on the left. If you want to learn more about the work I've done you can also click the GitHub icon to see some of the coding and technical writing projects I have worked on throughout the years. If you want to send me an email, fill out the form below and I'll get back to you as soon as I can!
-      </p>
-      <h2 class="sub-title">Send Me An Email!</h2>
-      <form class="contact-form">
-        <div class="form-group form-g">
-          <input type="email" class="form-control" placeholder="Email">
-        </div>
-        <div class="form-group form-g">
-          <input class="form-control" placeholder="Subject">
-        </div>
-        <div class="form-group form-g">
-          <textarea class="form-control" id="exampleFormControlTextarea1" rows="4" placeholder="Message"></textarea>
-        </div>
-      </form>
-      </section>
-
-    </div>
   </div>
+
+  
 </body>
 
 </html>
