--- a/index.html
+++ b/index.html
@@ -59,6 +59,31 @@
   <div class="top-bar"></div>
     <h2 class="name-top">Ian McConachie</h2>
     <h3 class="name-desc-top">Writer · Programmer</h3>
+
+    <!-- Social Links -->
+    <div class="social-div-top">
+        <a href="https://www.linkedin.com/in/ian-mcconachie-8b4513243/" class="social-link"><i class="fa-brands fa-linkedin social-logo-top"></i></a>
+        <a href="https://github.com/IanMcConachie" class="social-link"><i class="fa-brands fa-github social-logo-top"></i></a>
+    </div>
+
+
+    <!-- Site Menu -->
+    <div class="menu-div">
+      <ul class="menu-list-top">
+        <li class="menu-item-top">
+          <a href="#about-me" class="menu-link-top">About Me</a>
+        </li>
+        <li class="menu-item-top">
+          <a href="#portfolio" class="menu-link-top">Portfolio</a>
+        </li>
+        <li class="menu-item-top">
+          <a href="#work-exp" class="menu-link-top">Work Experience</a>
+        </li>
+        <li class="menu-item-top">
+          <a href="#contact" class="menu-link-top">Contact</a>
+        </li>
+      </ul>
+    </div>
   </div>
 
   <!-- Main Page -->
