Started Code Portfolio Restructure
Began to remodel code portfolio page.

--- a/code.html
+++ b/code.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Code Portfolio</title>
 
-	<link rel="stylesheet" href="css/styles.css">
+	<link rel="stylesheet" href="css/code.css">
 
 	<!-- Bootstrap -->
   	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -27,42 +27,42 @@
 		<h1 class="page-title">Code Portfolio</h1>
 	</div>
 
+
+
+
   <div class="row port-row">
-    <div class="col port-col col-sm-12 col-md-6 col-lg-4">
-      <a href="https://github.com/IanMcConachie/IanMcConachie.github.io" class="card-ref" target="_blank">
-        <div class="card">
-        <img class="card-img-top" src="images/web_logo.png" alt="Card image cap">
-        <div class="card-body">
-          <h5 class="card-title">Personal Website</h5>
-          <p class="card-text">Created a multi-page resume website using HTML, CSS, and Bootstrap. Built in responsive design and dynamic components.</p>
-        </div>
-      </div>
-      </a>    
+    <img class="port-img-left" src="images/web_logo.png">
+
+    <div class="port-text">
+      <h5 class="port-title">Personal Website</h5>
+      <p class="port-blurb">Created a multi-page resume website using HTML, CSS, and Bootstrap. Built in responsive design and dynamic components.</p>   
     </div>
 
-    <div class="col port-col col-sm-12 col-md-6 col-lg-4">
-      <a href="https://github.com/IanMcConachie/Fuji_Messenger" class="card-ref" target="_blank">
-        <div class="card">
-        <img class="card-img-top" src="images/fuji.jpg" alt="Card image cap">
-        <div class="card-body">
-          <h5 class="card-title">Fuji Messenger</h5>
-          <p class="card-text">Currently developing an instant messaging protocol that only allows messages in the form of a haiku. Using C++ and UDP packets to implement functionality.</p>
-        </div>
-      </div>
-      </a>    
+    <hr class="port-hr">
+  </div>
+
+  <div class="row port-row">
+
+    <div class="port-text">
+      <h5 class="port-title">Fuji Messenger</h5>
+      <p class="port-blurb">Developed an instant messaging protocol that only allows messages in the form of a haiku. Using C++ and UDP packets to implement functionality.</p>
     </div>
 
-    <div class="col port-col col-sm-12 col-md-6 col-lg-4">
-      <a href="https://github.com/IanMcConachie/CS422Project2/tree/main/gbiv" class="card-ref" target="_blank">
-        <div class="card">
-        <img class="card-img-top" src="images/color_wheel.png" alt="Card image cap">
-        <div class="card-body">
-          <h5 class="card-title">Gbiv Color Analyzer</h5>
-          <p class="card-text">Developed python script for extracting and analyzing the dominant color in an image. Also built functions for generating recommended palettes and related colors.</p>
-        </div>
-      </div>
-      </a>    
+    <img class="port-img-right" src="images/fuji.jpg" alt="Card image cap">
+
+    <hr class="port-hr">
+  </div>
+
+  <div class="row port-row">
+    <img class="port-img-left" src="images/color_wheel.png" alt="Card image cap">
+
+    <div class="port-text">
+      <h5 class="port-title">Gbiv Color Analyzer</h5>
+      <p class="port-blurb">Developed python script for extracting and analyzing the dominant color in an image. Also built functions for generating recommended palettes and related colors.</p>
     </div>
+
+    <hr class="port-hr">
+  </div>
 
 </body>
 
