--- a/index.html
+++ b/index.html
@@ -78,16 +78,16 @@
     <div class="menu-div">
       <ul class="menu-list-top">
         <li class="menu-item-top">
-          <a href="#about-me" class="menu-link-top">About Me</a>
+          <button onclick="scroller('about-me')" class="menu-link-top">About Me</button>
         </li>
         <li class="menu-item-top">
-          <a href="#portfolio" class="menu-link-top">Portfolio</a>
+          <button onclick="scroller('portfolio')" class="menu-link-top">Portfolio</button>
         </li>
         <li class="menu-item-top">
-          <a href="#work-exp" class="menu-link-top">Work Experience</a>
+          <button onclick="scroller('work-exp')" class="menu-link-top">Work Experience</button>
         </li>
         <li class="menu-item-top">
-          <a href="#contact" class="menu-link-top">Contact</a>
+          <button onclick="scroller('contact')" class="menu-link-top">Contact</button>
         </li>
       </ul>
     </div>
@@ -100,9 +100,9 @@
     <section id="about-me">
         <h1 class="main-title">About Me</h1>
         <p class="about-blurb">
-          Hello and welcome to my website! My name is Ian McConachie and I am a student studying math and computer science at the University of Oregon. My expected graduation date is in June 2023, after which I plan to pursue a career in technical writing. I am passionate about technology and science, but also love communicating with people especially through writing. It is my goal to spread interest and curiosity in technology so that I can share what I find so fascinating with the world.
+          Hello and welcome to my website! My name is Ian McConachie and I am a recent graduate in computer science and mathematics from Portland, Oregon. I am currently pursuing a career in academic research in the Boston area. Specifically, I am in the market for quantitative roles in university research groups. I am passionate about the advancement of science and I love to share that passion and curiosity with the world. 
           <br><br>
-          Outside the realm of technical writing, I also care deeply about volunteering. I have worked with organizations such as the Oregon Justice Resource Center, FOOD for Lane County, and the Oregon Food Bank. I believe it is important for every individual to try to make a positive impact on the world around them and I am always looking for new ways to help out. In addition to volunteering, my hobbies include photography, hiking/backpacking, and table tennis.
+          Outside of work, I care deeply about volunteering. I have worked with organizations such as the Oregon Justice Resource Center, Meals on Wheels, and the Oregon Food Bank. I believe it is important for every individual to try to make a positive impact on the world around them and I am always looking for new ways to help out. In addition to volunteering, my hobbies include writing, hiking/backpacking, and table tennis.
         </p>
 
       <div class="row about-table">
@@ -116,10 +116,10 @@
         </div>
         <div class="col col-6">
           <h2 class="sub-title">Skills</h2>
-          <h3 class="abt-subtitle">Technical</h3>
+          <h3 class="abt-subtitle">Programming</h3>
           <h4 class="abt-txt">Python (PyTorch, NumPy, Matplotlib), R, C++, C, Macaulay2 HTML, CSS, Javascript, LaTeX, Markdown, reStructuredText, Git, Linux</h4>
-          <h3 class="abt-subtitle">Non-Technical</h3>
-          <h4 class="abt-txt">Writing, Public Speaking, Quick Learning, Interpersonal Communication, Technical Communication, Team Management, Mathematical Reasoning</h4>
+          <h3 class="abt-subtitle">Non-Programming</h3>
+          <h4 class="abt-txt">Statistics, Data Analysis, Scientific and Technical Writing, Public Speaking, Interpersonal Communication, Quick Learning</h4>
         </div>
       </div>
     </section>
@@ -224,7 +224,7 @@
         <p class="about-blurb">There are several ways to get in touch with me. You can message me or make a connection on LinkedIn by clicking the LinkedIn logo on the left. If you want to learn more about the work I've done you can also click the GitHub icon to see some of the coding and technical writing projects I have worked on throughout the years.
         <br>
         <br>
-        If you want to get in touch through email, my email is listed below in a spam-proof format. Just to clarify, the word "email" is included in the email address--this has caused much confusion in the past, so I figure I should mention it haha.
+        If you want to get in touch through email, my email is listed below in a spam-proof format. Just to clarify, the word "email" is included in the email address--this has caused some confusion in the past, so I figure I should mention it here haha.
         </p>
         <div class="email">
           <h2 class="email-title">email {dot} mcconachie {at} gmail {dot} com</h2>
