--- a/code.html
+++ b/code.html
@@ -28,40 +28,42 @@
 	</div>
 
 
-
-
   <div class="row port-row">
-    <img class="port-img-left" src="images/web_logo.png">
+      <div class="col col-xl-3 col-lg-4 col-md-5 col-sm-6 port-row">
+        <a href="#"><img class="port-img-left" src="images/web_logo.png" alt="website-logo"></a>
+      </div>
 
-    <div class="port-text">
-      <h5 class="port-title">Personal Website</h5>
-      <p class="port-blurb">Created a multi-page resume website using HTML, CSS, and Bootstrap. Built in responsive design and dynamic components.</p>   
-    </div>
-
-    <hr class="port-hr">
+      <div class="col col-xl-9 col-lg-8 col-md-7 col-sm-6 port-text">
+          <h5 class="port-title"><a class="port-link" href="#">Personal Website</a></h5>
+          <p class="port-blurb">Created a multi-page resume website using HTML, CSS, and Javascript. Implemented a responsive web design using both custom CSS and Bootstrap. 
+          </p>   
+      </div>
   </div>
 
-  <div class="row port-row">
+  <hr class="port-hr">
 
-    <div class="port-text">
-      <h5 class="port-title">Fuji Messenger</h5>
-      <p class="port-blurb">Developed an instant messaging protocol that only allows messages in the form of a haiku. Using C++ and UDP packets to implement functionality.</p>
+  <div class="row port-row">
+    <div class="col col-xl-9 col-lg-8 col-md-7 col-sm-6 port-text">
+        <h5 class="port-title"><a class="port-link" href="#">Fuji Messenger</a></h5>
+        <p class="port-blurb">Developed an instant messaging protocol that only allows messages in the form of a haiku. Implemented using C++ and the UDP networking protocol.</p>  
     </div>
 
-    <img class="port-img-right" src="images/fuji.jpg" alt="Card image cap">
-
-    <hr class="port-hr">
+    <div class="col col-xl-3 col-lg-4 col-md-5 col-sm-6 port-row">
+      <a href="#"><img class="port-img-right" src="images/fuji.jpg" alt="mount-fuji-painting"></a>
+    </div>
   </div>
 
-  <div class="row port-row">
-    <img class="port-img-left" src="images/color_wheel.png" alt="Card image cap">
+  <hr class="port-hr">
 
-    <div class="port-text">
-      <h5 class="port-title">Gbiv Color Analyzer</h5>
-      <p class="port-blurb">Developed python script for extracting and analyzing the dominant color in an image. Also built functions for generating recommended palettes and related colors.</p>
+  <div class="row port-row">
+    <div class="col col-xl-3 col-lg-4 col-md-5 col-sm-6 port-row">
+      <a href=""><img class="port-img-left" src="images/color_wheel.png" alt="color-wheel"></a>
     </div>
 
-    <hr class="port-hr">
+    <div class="col col-xl-9 col-lg-8 col-md-7 col-sm-6 port-text">
+        <h5 class="port-title">Gbiv Color Analyzer</h5>
+        <p class="port-blurb">Developed python script for extracting and analyzing the dominant color in an image. Also built functions for generating recommended palettes and related colors.</p>  
+    </div>
   </div>
 
 </body>
