--- a/writing.html
+++ b/writing.html
@@ -5,7 +5,7 @@
   <title>Writing Portfolio</title>
 
 
-	<link rel="stylesheet" href="css/styles.css">
+	<link rel="stylesheet" href="css/portfolio.css">
 
 	<!-- Bootstrap -->
   	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -29,77 +29,87 @@
 	</div>
 
   <div class="row port-row">
-    <div class="col port-col col-sm-12 col-md-6 col-lg-4">
-      <a href="https://uefi.org/sites/default/files/resources/UEFI_Spec_2_10_Aug29.pdf" class="card-ref" target="_blank">
-        <div class="card">
-        <img class="card-img-top" src="images/uefi.png" alt="Card image cap">
-        <div class="card-body">
-          <h5 class="card-title">UEFI Specification</h5>
-          <p class="card-text">Edited, formatted, and contributed to UEFI Specification 2.9A and 2.10 as a Technical Writing Intern at Intel.</p>
-        </div>
+      <div class="col col-xl-3 col-lg-4 col-md-5 col-sm-6 port-row">
+        <a href="#"><img class="port-img-left" src="images/uefi.png" alt="uefi-logo"></a>
       </div>
-      </a>    
+
+      <div class="col col-xl-9 col-lg-8 col-md-7 col-sm-6 port-text">
+          <h5 class="port-title"><a class="port-link" href="#">UEFI Specification</a></h5>
+          <p class="port-blurb">Edited, formatted, and contributed to UEFI Specification 2.9A and 2.10 as a Technical Writing Intern at Intel.
+          </p>   
+      </div>
+  </div>
+
+  <hr class="port-hr">
+
+  <div class="row port-row">
+    <div class="col col-xl-9 col-lg-8 col-md-7 col-sm-6 port-text">
+        <h5 class="port-title"><a class="port-link" href="#">DATSR Documentation</a></h5>
+        <p class="port-blurb">Created documentation for student-led web time series repository project. Includes requirement engineering, design specification, user docs, and developer's manual.</p>  
     </div>
 
-    <div class="col port-col col-sm-12 col-md-6 col-lg-4">
-      <a href="https://github.com/IanMcConachie/CS-422-Project-1/tree/main/docs" class="card-ref" target="_blank">
-        <div class="card">
-        <img class="card-img-top" src="images/time_series.png" alt="Card image cap">
-        <div class="card-body">
-          <h5 class="card-title">DATSR Documentation</h5>
-          <p class="card-text">Created documentation for student-led web time series repository project. Includes requirement engineering, design specification, user docs, and developer's manual.</p>
-        </div>
+    <div class="col col-xl-3 col-lg-4 col-md-5 col-sm-6 port-row">
+      <a href="#"><img class="port-img-right" src="images/time_series.png" alt="mount-fuji-painting"></a>
+    </div>
+  </div>
+
+  <hr class="port-hr">
+
+  <div class="row port-row">
+      <div class="col col-xl-3 col-lg-4 col-md-5 col-sm-6 port-row">
+        <a href="#"><img class="port-img-left" src="images/tianocore.jpg" alt="tianocore-logo"></a>
       </div>
-      </a>    
+
+      <div class="col col-xl-9 col-lg-8 col-md-7 col-sm-6 port-text">
+          <h5 class="port-title"><a class="port-link" href="#">Tianocore Training Guides</a></h5>
+          <p class="port-blurb">Wrote Markdown lab guides for firmware development courses as part of the Tianocore training program as a Technical Writing Intern at Intel.
+          </p>   
+      </div>
+  </div>
+
+  <hr class="port-hr">
+
+  <div class="row port-row">
+    <div class="col col-xl-9 col-lg-8 col-md-7 col-sm-6 port-text">
+        <h5 class="port-title"><a class="port-link" href="#">Gbiv Documentation</a></h5>
+        <p class="port-blurb">Working on documentation for color analysis web application. Includes requirement engineering, design specification, user docs, and developer's manual.</p>  
     </div>
 
-    <div class="col port-col col-sm-12 col-md-6 col-lg-4">
-      <a href="https://github.com/IanMcConachie/Presentation_FW/tree/main/FW/Presentations/Lab_Guides" class="card-ref" target="_blank">
-        <div class="card">
-        <img class="card-img-top" src="images/tianocore.jpg" alt="Card image cap">
-        <div class="card-body">
-          <h5 class="card-title">Tianocore Training Guides</h5>
-          <p class="card-text">Wrote Markdown lab guides for firmware development courses as part of the Tianocore training program as a Technical Writing Intern at Intel.</p>
-        </div>
+    <div class="col col-xl-3 col-lg-4 col-md-5 col-sm-6 port-row">
+      <a href="#"><img class="port-img-right" src="images/color_wheel.png" alt="color-wheel"></a>
+    </div>
+  </div>
+
+  <hr class="port-hr">
+
+  <div class="row port-row">
+      <div class="col col-xl-3 col-lg-4 col-md-5 col-sm-6 port-row">
+        <a href="#"><img class="port-img-left" src="images/uefi.png" alt="uefi-logo"></a>
       </div>
-      </a>    
+
+      <div class="col col-xl-9 col-lg-8 col-md-7 col-sm-6 port-text">
+          <h5 class="port-title"><a class="port-link" href="#">ACPI Specification</a></h5>
+          <p class="port-blurb">Edited, formatted, and contributed to ACPI Specification 6.4A and 6.5 as a Technical Writing Intern at Intel.
+          </p>   
+      </div>
+  </div>
+
+  <hr class="port-hr">
+
+  <div class="row port-row">
+    <div class="col col-xl-9 col-lg-8 col-md-7 col-sm-6 port-text">
+        <h5 class="port-title"><a class="port-link" href="#">Wikipedia Editing</a></h5>
+        <p class="port-blurb">Edited several wikipedia pages both adding new content and improving/editing existing content.</p>  
     </div>
 
-    <div class="col port-col col-sm-12 col-md-6 col-lg-4">
-      <a href="https://uefi.org/sites/default/files/resources/PI_Spec_1_7_A_final_May1.pdf" class="card-ref" target="_blank">
-        <div class="card">
-        <img class="card-img-top" src="images/color_wheel.png" alt="Card image cap">
-        <div class="card-body">
-          <h5 class="card-title">Gbiv Documentation</h5>
-          <p class="card-text">Working on documentation for color analysis web application. Includes requirement engineering, design specification, user docs, and developer's manual.</p>
-        </div>
-      </div>
-      </a>    
+    <div class="col col-xl-3 col-lg-4 col-md-5 col-sm-6 port-row">
+      <a href="#"><img class="port-img-right" src="images/wiki_logo.png" alt="wikipedia-logo"></a>
     </div>
+  </div>
 
-    <div class="col port-col col-sm-12 col-md-6 col-lg-4">
-      <a href="https://uefi.org/sites/default/files/resources/ACPI_Spec_6_5_Aug29.pdf" class="card-ref" target="_blank">
-        <div class="card">
-        <img class="card-img-top" src="images/uefi.png" alt="Card image cap">
-        <div class="card-body">
-          <h5 class="card-title">ACPI Specification</h5>
-          <p class="card-text">Edited, formatted, and contributed to ACPI Specification 6.4A and 6.5 as a Technical Writing Intern at Intel.</p>
-        </div>
-      </div>
-      </a>    
-    </div>
-
-    <div class="col port-col col-sm-12 col-md-6 col-lg-4">
-      <a href="https://github.com/IanMcConachie/Presentation_FW/tree/main/FW/Presentations/Lab_Guides" class="card-ref" target="_blank">
-        <div class="card">
-        <img class="card-img-top" src="images/wiki_logo.png" alt="Card image cap">
-        <div class="card-body">
-          <h5 class="card-title">Wikipedia Editing</h5>
-          <p class="card-text">Edited several wikipedia pages both adding new content and improving/editing existing content.</p>
-        </div>
-      </div>
-      </a>    
-    </div>
+  <hr class="port-hr">
 
   </div>
+
+  
 </body>
