Minor style fixes
Changed some minor parts of the style for the code portfolio.

--- a/code.html
+++ b/code.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Code Portfolio</title>
 
-	<link rel="stylesheet" href="css/code.css">
+	<link rel="stylesheet" href="css/portfolio.css">
 
 	<!-- Bootstrap -->
   	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -61,7 +61,7 @@
     </div>
 
     <div class="col col-xl-9 col-lg-8 col-md-7 col-sm-6 port-text">
-        <h5 class="port-title">Gbiv Color Analyzer</h5>
+        <h5 class="port-title"><a class="port-link" href="">Gbiv Color Analyzer</a></h5>
         <p class="port-blurb">Developed python script for extracting and analyzing the dominant color in an image. Also built functions for generating recommended palettes and related colors.</p>  
     </div>
   </div>
