--- a/index.html
+++ b/index.html
@@ -111,13 +111,13 @@
           <h3 class="abt-subtitle">University of Oregon</h3>
           <h4 class="abt-txt"><b>2019-2023, Bachelor's of Science</b></h4>
           <h4 class="abt-txt"><b>Majors:</b> Computer Science, Mathematics</h4>
-          <h4 class="abt-txt"><b>GPA:</b> 4.10, Summa Cum Laude</h4>
+          <h4 class="abt-txt"><b>GPA:</b> 4.10, summa cum laude</h4>
           <h4 class="abt-txt"><b>Selected Courses:</b> Statistical Methods I-II, Regression and Variance, Scientific and Technical Writing, Machine Learning, Software Methodologies, Secure Software Development</h4>
         </div>
         <div class="col col-6">
           <h2 class="sub-title">Skills</h2>
           <h3 class="abt-subtitle">Programming</h3>
-          <h4 class="abt-txt">Python (PyTorch, NumPy, Matplotlib), R, C++, C, Macaulay2 HTML, CSS, Javascript, LaTeX, Markdown, reStructuredText, Git, Linux</h4>
+          <h4 class="abt-txt">Python (PyTorch, NumPy, Matplotlib, pandas), R, C++, C, Macaulay2 HTML, CSS, Javascript, LaTeX, Markdown, reStructuredText, Git, Linux</h4>
           <h3 class="abt-subtitle">Non-Programming</h3>
           <h4 class="abt-txt">Statistics, Data Analysis, Scientific and Technical Writing, Public Speaking, Interpersonal Communication, Quick Learning</h4>
         </div>
